--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>西红柿</title>
+  <title>AI番茄钟 - 超甜西红柿</title>
   <link rel="stylesheet" href="style.css" />
   <!-- 电子管字体 -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1>一只西红柿</h1>
+      <h1>超甜西红柿</h1>
       <div>
         <button id="history-btn" class="icon-btn">📜</button>
         <button id="settings-btn" class="icon-btn">⚙</button>
